# emx-onnx2c

./: .gitmodules  AGENTS.md  DEVELOPMENT.md  MANIFEST.in  OFFICIAL_ONNX_FILE_SUPPORT.md  OFFICIAL_ONNX_FILE_SUPPORT_HISTOGRAM.md  OFFICIAL_ONNX_FILE_SUPPORT_preview.html  README.md  SUPPORT_OPS.md  build_backend.py  pyproject.toml  requirements-ci.txt
docs/: pytest_speed_report.md
prompts/: fix_random_test.py
reports/: pytest_speed_report.md
templates/: arg_reduce_op.c.j2  attention_op.c.j2  average_pool_op.c.j2  batch_norm_op.c.j2  binary_op.c.j2  cast_op.c.j2  celu_op.c.j2  clip_op.c.j2  concat_op.c.j2  constant_of_shape_op.c.j2  conv_op.c.j2  conv_transpose_op.c.j2  cumsum_op.c.j2  depth_to_space_op.c.j2  eye_like_op.c.j2  gather_elements_op.c.j2  gather_nd_op.c.j2  gather_op.c.j2  gemm_op.c.j2  grid_sample_op.c.j2  group_normalization_op.c.j2  hardmax_op.c.j2  identity_op.c.j2  instance_normalization_op.c.j2  layer_normalization_op.c.j2  logsoftmax_op.c.j2  lp_normalization_op.c.j2  lp_pool_op.c.j2  lrn_op.c.j2  lstm_op.c.j2  matmul_op.c.j2  maxpool_op.c.j2  mean_variance_normalization_op.c.j2  model.c.j2  model_chain.c.j2  multi_input_op.c.j2  negative_log_likelihood_loss_op.c.j2  one_hot_op.c.j2  pad_op.c.j2  predicate_op.c.j2  (+24 more)
tests/: conftest.py  golden_utils.py  local_onnx_expected_errors.json  official_onnx_expected_errors.json  official_onnx_first_500_expected_errors.json  test_add_mvp.py  test_cli.py  test_codegen_data_file.py  test_codegen_signature.py  test_determinism.py  test_endtoend.py  test_endtoend_features.py  test_endtoend_ops.py  test_ops.py  (+11 more)
(+2142 files in other folders)
