[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "onnx2c"
version = "0.1.0"
description = "ONNX to C compiler"
requires-python = ">=3.10"

[project.scripts]
onnx2c = "onnx2c.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
