[build-system]
requires = ["setuptools>=61"]
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "emx-onnx-cgen"
version = "0.1.1"
description = "emmtrix ONNX-to-C Code Generator"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"

[project.scripts]
emx-onnx-cgen = "onnx2c.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
