[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=7.0"]
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "emx-onnx-cgen"
description = "emmtrix ONNX-to-C Code Generator"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dynamic = ["version"]

[project.scripts]
emx-onnx-cgen = "emx_onnx_cgen.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/emx_onnx_cgen/_version.py"
